Implement straight with ace as lowest value, fix test